--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,65 +1,71 @@
 {
-  "type": "module",
-  "name": "cct-frontend-preset-react-typescript",
-  "version": "0.1.0",
-  "description": "A preset for developing Carrot templates' frontend with React and Typescript.",
-  "author": "Federico Luzzi <federico.luzzi@protonmail.com>",
-  "license": "GPL-3.0-or-later",
-  "private": true,
-  "keywords": [
-    "carrot",
-    "create-carrot-template",
-    "preset"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/carrot-kpi/cct-frontend-preset-react-typescript.git"
-  },
-  "bugs": {
-    "url": "https://github.com/carrot-kpi/cct-frontend-preset-react-typescript/issues"
-  },
-  "scripts": {
-    "lint": "eslint --ext .ts,.tsx ./src ./scripts && prettier --check ./src ./scripts",
-    "build": "node ./scripts/build.js",
-    "start": "node ./scripts/run.js",
-    "test": "jest"
-  },
-  "devDependencies": {
-    "@carrot-kpi/react": "^0.2.0",
-    "@carrot-kpi/sdk": "^1.0.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@types/git-rev-sync": "^2.0.0",
-    "@types/jest": "^29.0.3",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "chalk": "^5.0.1",
-    "eslint": "^8.23.1",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "ethers": "^5.7.1",
-    "fork-ts-checker-webpack-plugin": "^7.2.13",
-    "git-rev-sync": "^3.0.2",
-    "html-webpack-plugin": "^5.5.0",
-    "i18next": "^21.9.2",
-    "jest": "^29.0.3",
-    "jest-environment-jsdom": "^29.0.3",
-    "prettier": "^2.7.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^11.18.6",
-    "react-test-renderer": "^18.2.0",
-    "rimraf": "^3.0.2",
-    "terser-webpack-plugin": "^5.3.6",
-    "ts-jest": "^29.0.3",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.8.3",
-    "wagmi": "^0.6.7",
-    "webpack": "^5.74.0",
-    "webpack-dev-server": "^4.11.1"
-  }
+    "type": "module",
+    "name": "frontend",
+    "version": "0.1.0",
+    "description": "A preset for developing Carrot templates' frontend with React and Typescript.",
+    "author": "Federico Luzzi <federico.luzzi@protonmail.com>",
+    "license": "GPL-3.0-or-later",
+    "private": true,
+    "keywords": [
+        "carrot",
+        "create-carrot-template",
+        "preset"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/carrot-kpi/cct-frontend-preset-react-typescript.git"
+    },
+    "bugs": {
+        "url": "https://github.com/carrot-kpi/cct-frontend-preset-react-typescript/issues"
+    },
+    "scripts": {
+        "lint": "eslint --ext .ts,.tsx ./src ./scripts && prettier --check ./src ./scripts",
+        "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './*.{json,.md}'",
+        "build": "./scripts/build.js",
+        "test": "jest"
+    },
+    "devDependencies": {
+        "@carrot-kpi/react": "^0.19.0",
+        "@carrot-kpi/sdk": "^1.12.0",
+        "@carrot-kpi/ui": "^0.7.0",
+        "@fontsource/ibm-plex-mono": "^4.5.13",
+        "@tailwindcss/typography": "^0.5.8",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@types/git-rev-sync": "^2.0.0",
+        "@types/jest": "^29.0.3",
+        "@types/react": "^18.0.21",
+        "@types/react-dom": "^18.0.6",
+        "autoprefixer": "^10.4.13",
+        "carrot-scripts": "0.11.0",
+        "chalk": "^5.0.1",
+        "css-loader": "^6.7.2",
+        "eslint-config-custom": "workspace:*",
+        "eslint-plugin-react": "^7.31.11",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "ethers": "^5.7.1",
+        "fork-ts-checker-webpack-plugin": "^7.2.13",
+        "git-rev-sync": "^3.0.2",
+        "html-webpack-plugin": "^5.5.0",
+        "i18next": "^21.9.2",
+        "jest": "^29.0.3",
+        "jest-environment-jsdom": "^29.0.3",
+        "mini-css-extract-plugin": "^2.7.2",
+        "postcss": "^8.4.20",
+        "postcss-loader": "^7.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-i18next": "^11.18.6",
+        "react-test-renderer": "^18.2.0",
+        "rimraf": "^3.0.2",
+        "style-loader": "^3.3.1",
+        "tailwindcss": "^3.2.4",
+        "terser-webpack-plugin": "^5.3.6",
+        "ts-jest": "^29.0.3",
+        "ts-loader": "^9.4.1",
+        "typescript": "^4.8.3",
+        "wagmi": "^0.9.5",
+        "webpack": "^5.74.0",
+        "webpack-dev-server": "^4.11.1"
+    }
 }
