--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,11 @@
-[submodule "packages/contracts/lib/carrot"]
-	path = packages/contracts/lib/carrot
-	url = https://github.com/carrot-kpi/contracts-v1
 [submodule "packages/contracts/lib/forge-std"]
 	path = packages/contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
-[submodule "packages/contracts/lib/ds-test"]
-	path = packages/contracts/lib/ds-test
-	url = https://github.com/dapphub/ds-test
+	branch = v1.2.0
+[submodule "packages/contracts/lib/carrot"]
+	path = packages/contracts/lib/carrot
+	url = https://github.com/carrot-kpi/contracts-v1
+[submodule "packages/contracts/lib/openzeppelin-contracts-upgradeable"]
+	path = packages/contracts/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+	branch = v4.8.0
