--- a/packages/frontend/.eslintrc
+++ b/packages/frontend/.eslintrc
@@ -1,32 +1,25 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": [
-    "plugin:react/recommended",
-    "plugin:react-hooks/recommended",
-    "standard-with-typescript"
-  ],
-  "overrides": [],
-  "parserOptions": {
-    "project": "./tsconfig.json"
-  },
-  "plugins": ["react", "react-hooks"],
-  "settings": {
-    "react": {
-      "version": "detect"
+    "root": true,
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "custom",
+        "plugin:react/recommended",
+        "plugin:react-hooks/recommended"
+    ],
+    "plugins": ["react"],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
+    "rules": {
+        "react/react-in-jsx-scope": "off",
+        "space-before-function-paren": "off",
+        "arrow-body-style": "off",
+        "prefer-arrow-callback": "off",
+        "react-hooks/exhaustive-deps": "error"
     }
-  },
-  "rules": {
-    "@typescript-eslint/space-before-function-paren": "off",
-    "@typescript-eslint/strict-boolean-expressions": "off",
-    "@typescript-eslint/member-delimiter-style": 0,
-    "@typescript-eslint/no-dynamic-delete": "off",
-    "@typescript-eslint/comma-dangle": "off",
-    "comma-dangle": "off",
-    "react/react-in-jsx-scope": "off",
-    "react-hooks/exhaustive-deps": "error",
-    "space-before-function-paren": "off"
-  }
 }
