test(frontend): slim down tests config a bit

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -1,10 +1,5 @@
 {
-    "include": [
-        "./src/**/*.tsx",
-        "./src/**/*.ts",
-        "./playground/*.ts",
-        "./playground/*.tsx"
-    ],
+    "include": ["tests/**/*", "src/**/*", "playground/**/*"],
     "exclude": ["node_modules"],
     "compilerOptions": {
         "outDir": "./dist",
