--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -21,15 +21,15 @@
     "scripts": {
         "lint": "eslint --ext .ts,.tsx ./ && prettier --check .",
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write .",
-        "build": "./scripts/build.js",
+        "build": "NODE_ENV=production node ./scripts/build.js",
         "test": "echo 'Fix issues with pnpm and Jest not resolving modules'"
     },
     "devDependencies": {
-        "@carrot-kpi/react": "^0.19.0",
+        "@carrot-kpi/react": "^0.21.0",
         "@carrot-kpi/sdk": "^1.12.0",
-        "@carrot-kpi/ui": "^0.8.4",
+        "@carrot-kpi/ui": "^0.9.1",
         "@fontsource/ibm-plex-mono": "^4.5.13",
-        "@tailwindcss/typography": "^0.5.8",
+        "@svgr/webpack": "^6.5.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@types/git-rev-sync": "^2.0.0",
@@ -40,6 +40,8 @@
         "carrot-scripts": "0.11.0",
         "chalk": "^5.0.1",
         "css-loader": "^6.7.2",
+        "cssnano": "^5.1.14",
+        "dayjs": "^1.11.7",
         "eslint-config-custom": "workspace:*",
         "eslint-plugin-react": "^7.31.11",
         "eslint-plugin-react-hooks": "^4.6.0",
@@ -64,6 +66,7 @@
         "ts-jest": "^29.0.3",
         "ts-loader": "^9.4.1",
         "typescript": "^4.8.3",
+        "url-loader": "^4.1.1",
         "wagmi": "^0.9.5",
         "webpack": "^5.74.0",
         "webpack-dev-server": "^4.11.1"
