--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,10 +25,11 @@
         "test": "echo 'Fix issues with pnpm and Jest not resolving modules'"
     },
     "devDependencies": {
-        "@carrot-kpi/react": "^0.22.0",
-        "@carrot-kpi/sdk": "^1.12.0",
+        "@carrot-kpi/react": "^0.22.1",
+        "@carrot-kpi/sdk": "^1.13.2",
         "@carrot-kpi/ui": "^0.14.0",
         "@fontsource/ibm-plex-mono": "^4.5.13",
+        "@fontsource/inter": "^4.5.15",
         "@svgr/webpack": "^6.5.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
