--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -43,7 +43,7 @@
         "css-loader": "^6.7.2",
         "cssnano": "^5.1.14",
         "dayjs": "^1.11.7",
-        "eslint-config-custom": "workspace:*",
+        "eslint-config-custom": "*",
         "eslint-plugin-react": "^7.31.11",
         "eslint-plugin-react-hooks": "^4.6.0",
         "ethers": "^5.7.1",
