chore(frontend): update lint task

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -19,7 +19,7 @@
         "url": "https://github.com/carrot-kpi/cct-frontend-preset-react-typescript/issues"
     },
     "scripts": {
-        "lint": "eslint --ext .ts,.tsx ./ && prettier --check .",
+        "lint": "eslint --ext .js,.ts,.tsx ./src ./scripts ./.cct ./jest.config.js",
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write .",
         "build": "NODE_ENV=production node ./scripts/build.js",
         "test": "echo 'Fix issues with pnpm and Jest not resolving modules'"
