--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "version": "0.1.0",
     "description": "A Carrot template.",
     "license": "GPL-3.0",
-    "workspaces": ["packages/*"],
+    "workspaces": [
+        "packages/*"
+    ],
     "scripts": {
         "build": "turbo run build",
         "build:contracts": "yarn build --filter contracts",
@@ -18,7 +20,7 @@
     "devDependencies": {
         "@commitlint/cli": "^17.4.2",
         "@commitlint/config-conventional": "^17.4.2",
-        "carrot-scripts": "0.11.0",
+        "carrot-scripts": "0.13.0",
         "husky": "^8.0.3",
         "prettier": "^2.8.3",
         "turbo": "^1.7.0"
