--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,6 +25,7 @@
         "test": "echo 'Fix issues with pnpm and Jest not resolving modules'"
     },
     "devDependencies": {
+        "@carrot-kpi/frontend": "^1.0.0-rc.26",
         "@carrot-kpi/react": "^0.25.2",
         "@carrot-kpi/sdk": "^1.13.2",
         "@carrot-kpi/ui": "^0.21.0",
