--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -15,10 +15,10 @@
         "codegen-chain-specific-contracts": "./codegen-chain-specific-contracts.js"
     },
     "devDependencies": {
-        "@carrot-kpi/sdk": "^1.16.5",
+        "@carrot-kpi/sdk": "^1.17.0",
         "ethers": "^5.7.2",
         "prettier": "^2.7.1",
-        "prettier-plugin-solidity": "^1.0.0-beta.19",
+        "prettier-plugin-solidity": "^1.1.3",
         "solhint-plugin-prettier": "^0.0.5"
     }
 }
