--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -40,6 +40,7 @@
         "@types/react-dom": "^18.0.6",
         "autoprefixer": "^10.4.13",
         "chalk": "^5.0.1",
+        "class-variance-authority": "^0.4.0",
         "css-loader": "^6.7.2",
         "cssnano": "^5.1.14",
         "dayjs": "^1.11.7",
