First iteration of page component (#2)
* feat: add basic info about reality question

* feat(frontend): implement fetcher and fetch question function

* fix(frontend): avoid calls loop, minor refactor

* fix(frontend): use the question cid wen fetching from ipfs

* refactor(frontend): use useContract hook inside useRealityAnswer

* feat(frontend): add basic reality answer form

* fix(frontend): tweaks and fixes

* refactor(frontend): use useEffect for minimum bond

* refactor(frontend): move hooks inside AnswerForm

* refactor(frontend): remove useRelityAnswer hook

* feat(frontend): add invalid checkbox, add finalized state

* fix(frontend): always use dayjs/unix when dealing with opening timestamp

* chore: upgrade carrot-scripts

* feat(frontend): add invalid and too soon answers

* feat(frotnend): review code structure

* feat(frontend): add answered too soon case

* feat(frontend): add reopen question button

* chore: upgrade carrot deps

* feat(frontend): add refresh when opening countdown expires

* feat(frontend): add minimum bond as input default value

* fix(frontend): make reopenings work

* fix(frontend): use unix time for countdown

---------

Co-authored-by: Federico Luzzi <fedeluzzi00@gmail.com>

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,10 +25,10 @@
         "test": "echo 'Fix issues with pnpm and Jest not resolving modules'"
     },
     "devDependencies": {
-        "@carrot-kpi/frontend": "^1.0.0-rc.39",
+        "@carrot-kpi/frontend": "^1.0.0-rc.42",
         "@carrot-kpi/react": "^0.31.0",
-        "@carrot-kpi/sdk": "^1.17.0",
-        "@carrot-kpi/ui": "^0.29.0",
+        "@carrot-kpi/sdk": "^1.17.1",
+        "@carrot-kpi/ui": "^0.30.1",
         "@fontsource/ibm-plex-mono": "^4.5.13",
         "@fontsource/inter": "^4.5.15",
         "@svgr/webpack": "^6.5.1",
@@ -40,6 +40,7 @@
         "@types/react-dom": "^18.0.6",
         "autoprefixer": "^10.4.13",
         "chalk": "^5.0.1",
+        "class-variance-authority": "^0.4.0",
         "css-loader": "^6.7.2",
         "cssnano": "^5.1.14",
         "dayjs": "^1.11.7",
@@ -60,7 +61,7 @@
         "react-dom": "^18.2.0",
         "react-i18next": "^12.0.0",
         "react-test-renderer": "^18.2.0",
-        "rimraf": "^4.1.2",
+        "rimraf": "^4.1.3",
         "style-loader": "^3.3.1",
         "tailwindcss": "^3.2.4",
         "terser-webpack-plugin": "^5.3.6",
