--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -15,6 +15,7 @@
         "target": "ES6",
         "sourceMap": true,
         "strict": true,
+        "rootDirs": ["./src"],
         "alwaysStrict": true,
         "strictNullChecks": true,
         "noUnusedLocals": true,
