--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -31,7 +31,7 @@
         "@carrot-kpi/ui": "^0.34.1",
         "@fontsource/ibm-plex-mono": "^4.5.13",
         "@fontsource/inter": "^4.5.15",
-        "@svgr/webpack": "^6.5.1",
+        "@svgr/webpack": "^7.0.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
         "@types/git-rev-sync": "^2.0.0",
@@ -57,11 +57,12 @@
         "mini-css-extract-plugin": "^2.7.2",
         "postcss": "^8.4.20",
         "postcss-loader": "^7.0.2",
+        "prettier": "^2.8.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^12.0.0",
         "react-test-renderer": "^18.2.0",
-        "rimraf": "^4.1.3",
+        "rimraf": "^4.4.1",
         "style-loader": "^3.3.1",
         "tailwindcss": "^3.2.7",
         "terser-webpack-plugin": "^5.3.6",
