--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,10 +25,11 @@
         "test": "echo 'Fix issues with pnpm and Jest not resolving modules'"
     },
     "devDependencies": {
-        "@carrot-kpi/frontend": "^1.0.0-rc.57",
-        "@carrot-kpi/react": "^0.36.3",
-        "@carrot-kpi/sdk": "^1.21.2",
-        "@carrot-kpi/ui": "^0.34.1",
+        "@carrot-kpi/frontend": "^1.0.0-rc.59",
+        "@carrot-kpi/react": "^0.37.2",
+        "@carrot-kpi/sdk": "^1.23.1",
+        "@carrot-kpi/ui": "^0.35.0",
+        "@commitlint/cli": "^17.5.1",
         "@fontsource/ibm-plex-mono": "^4.5.13",
         "@fontsource/inter": "^4.5.15",
         "@svgr/webpack": "^7.0.0",
@@ -36,13 +37,13 @@
         "@testing-library/react": "^14.0.0",
         "@types/git-rev-sync": "^2.0.0",
         "@types/jest": "^29.0.3",
-        "@types/react": "^18.0.21",
+        "@types/react": "^18.0.31",
         "@types/react-dom": "^18.0.6",
         "autoprefixer": "^10.4.13",
         "chalk": "^5.0.1",
         "class-variance-authority": "^0.4.0",
         "css-loader": "^6.7.2",
-        "cssnano": "^5.1.14",
+        "cssnano": "^6.0.0",
         "dayjs": "^1.11.7",
         "eslint-config-custom": "*",
         "eslint-plugin-react": "^7.31.11",
@@ -64,10 +65,11 @@
         "react-test-renderer": "^18.2.0",
         "rimraf": "^4.4.1",
         "style-loader": "^3.3.1",
-        "tailwindcss": "^3.2.7",
+        "tailwindcss": "^3.3.0",
         "terser-webpack-plugin": "^5.3.6",
         "ts-jest": "^29.0.3",
         "ts-loader": "^9.4.1",
+        "turbo": "^1.8.6",
         "typescript": "^5.0.2",
         "url-loader": "^4.1.1",
         "wagmi": "^0.9.5",
