--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -58,6 +58,7 @@
         "mini-css-extract-plugin": "^2.7.2",
         "postcss": "^8.4.20",
         "postcss-loader": "^7.0.2",
+        "postcss-prefix-selector": "^1.16.0",
         "prettier": "^2.8.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
