--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,25 +25,25 @@
         "test": "echo 'Fix issues with pnpm and Jest not resolving modules'"
     },
     "devDependencies": {
-        "@carrot-kpi/frontend": "^1.0.0-rc.60",
-        "@carrot-kpi/react": "^0.38.1",
-        "@carrot-kpi/sdk": "^1.23.1",
-        "@carrot-kpi/ui": "^0.37.0",
-        "@commitlint/cli": "^17.5.1",
+        "@carrot-kpi/host-frontend": "^0.1.0",
+        "@carrot-kpi/react": "^0.41.0",
+        "@carrot-kpi/sdk": "^1.24.1",
+        "@carrot-kpi/ui": "^0.41.1",
+        "@commitlint/cli": "^17.6.1",
         "@fontsource/ibm-plex-mono": "^4.5.13",
         "@fontsource/inter": "^4.5.15",
         "@svgr/webpack": "^7.0.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
         "@types/git-rev-sync": "^2.0.0",
-        "@types/jest": "^29.0.3",
-        "@types/react": "^18.0.33",
-        "@types/react-dom": "^18.0.6",
+        "@types/jest": "^29.5.1",
+        "@types/react": "^18.2.0",
+        "@types/react-dom": "^18.2.1",
         "autoprefixer": "^10.4.13",
         "chalk": "^5.0.1",
-        "class-variance-authority": "^0.4.0",
+        "class-variance-authority": "^0.6.0",
         "css-loader": "^6.7.2",
-        "cssnano": "^6.0.0",
+        "cssnano": "^6.0.1",
         "dayjs": "^1.11.7",
         "eslint-config-custom": "*",
         "eslint-plugin-react": "^7.31.11",
@@ -51,33 +51,33 @@
         "ethers": "^5.7.1",
         "fork-ts-checker-webpack-plugin": "^8.0.0",
         "git-rev-sync": "^3.0.2",
-        "html-webpack-plugin": "^5.5.0",
-        "i18next": "^22.4.14",
+        "html-webpack-plugin": "^5.5.1",
+        "i18next": "^22.4.15",
         "jest": "^29.0.3",
         "jest-environment-jsdom": "^29.0.3",
         "mini-css-extract-plugin": "^2.7.2",
-        "postcss": "^8.4.20",
-        "postcss-loader": "^7.0.2",
+        "postcss": "^8.4.23",
+        "postcss-loader": "^7.3.0",
         "postcss-prefix-selector": "^1.16.0",
-        "prettier": "^2.8.7",
+        "prettier": "^2.8.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-i18next": "^12.0.0",
+        "react-i18next": "^12.2.2",
         "react-test-renderer": "^18.2.0",
-        "rimraf": "^4.4.1",
+        "rimraf": "^5.0.0",
         "style-loader": "^3.3.1",
-        "tailwindcss": "^3.3.1",
+        "tailwindcss": "^3.3.2",
         "terser-webpack-plugin": "^5.3.6",
-        "ts-jest": "^29.0.3",
+        "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.1",
-        "turbo": "^1.8.8",
-        "typescript": "^5.0.3",
+        "turbo": "^1.9.3",
+        "typescript": "^5.0.4",
         "url-loader": "^4.1.1",
-        "wagmi": "^0.9.5",
-        "webpack": "^5.76.3",
-        "webpack-dev-server": "^4.13.2"
+        "wagmi": "^0.12.12",
+        "webpack": "^5.81.0",
+        "webpack-dev-server": "^4.13.3"
     },
     "dependencies": {
-        "@carrot-kpi/shared-state": "^0.2.0"
+        "@carrot-kpi/shared-state": "^0.3.1"
     }
 }
