--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,13 +25,13 @@
         "test": "echo 'Fix issues with pnpm and Jest not resolving modules'"
     },
     "devDependencies": {
-        "@carrot-kpi/host-frontend": "^0.2.0",
-        "@carrot-kpi/react": "^0.42.0",
+        "@carrot-kpi/host-frontend": "^0.3.2",
+        "@carrot-kpi/react": "^0.43.0",
         "@carrot-kpi/sdk": "^1.24.1",
-        "@carrot-kpi/ui": "^0.41.1",
+        "@carrot-kpi/switzer-font": "^0.1.0",
+        "@carrot-kpi/ui": "^0.43.1",
         "@commitlint/cli": "^17.6.3",
         "@fontsource/ibm-plex-mono": "^4.5.13",
-        "@fontsource/inter": "^4.5.15",
         "@svgr/webpack": "^7.0.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
@@ -67,15 +67,15 @@
         "rimraf": "^5.0.0",
         "style-loader": "^3.3.1",
         "tailwindcss": "^3.3.2",
-        "terser-webpack-plugin": "^5.3.6",
+        "terser-webpack-plugin": "^5.3.8",
         "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.1",
-        "turbo": "^1.9.3",
+        "turbo": "^1.9.4",
         "typescript": "^5.0.4",
         "url-loader": "^4.1.1",
         "wagmi": "^0.12.12",
-        "webpack": "^5.82.0",
-        "webpack-dev-server": "^4.13.3"
+        "webpack": "^5.82.1",
+        "webpack-dev-server": "^4.15.0"
     },
     "dependencies": {
         "@carrot-kpi/shared-state": "^0.3.1"
