--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -15,10 +15,10 @@
         "codegen-chain-specific-contracts": "./codegen-chain-specific-contracts.js"
     },
     "devDependencies": {
-        "@carrot-kpi/sdk": "^1.25.0",
-        "ethers": "^5.7.2",
+        "@carrot-kpi/sdk": "^1.26.0",
         "prettier": "^2.8.8",
         "prettier-plugin-solidity": "^1.1.3",
-        "solhint-plugin-prettier": "^0.0.5"
+        "solhint-plugin-prettier": "^0.0.5",
+        "viem": "^0.3.30"
     }
 }
