--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,14 +25,10 @@
         "test": "echo 'Fix issues with pnpm and Jest not resolving modules'"
     },
     "devDependencies": {
-        "@carrot-kpi/host-frontend": "^0.3.3",
-        "@carrot-kpi/react": "^0.44.0",
-        "@carrot-kpi/sdk": "^1.25.0",
+        "@carrot-kpi/host-frontend": "^0.4.2",
         "@carrot-kpi/switzer-font": "^0.1.0",
-        "@carrot-kpi/ui": "^0.43.1",
         "@commitlint/cli": "^17.6.3",
-        "@fontsource/ibm-plex-mono": "^4.5.13",
-        "@svgr/webpack": "^7.0.0",
+        "@svgr/webpack": "^8.0.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
         "@types/git-rev-sync": "^2.0.0",
@@ -41,18 +37,14 @@
         "@types/react-dom": "^18.2.1",
         "autoprefixer": "^10.4.13",
         "chalk": "^5.0.1",
-        "class-variance-authority": "^0.6.0",
         "css-loader": "^6.7.2",
         "cssnano": "^6.0.1",
-        "dayjs": "^1.11.7",
         "eslint-config-custom": "*",
         "eslint-plugin-react": "^7.31.11",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "ethers": "^5.7.1",
         "fork-ts-checker-webpack-plugin": "^8.0.0",
         "git-rev-sync": "^3.0.2",
         "html-webpack-plugin": "^5.5.1",
-        "i18next": "^22.4.15",
         "jest": "^29.0.3",
         "jest-environment-jsdom": "^29.0.3",
         "mini-css-extract-plugin": "^2.7.2",
@@ -60,24 +52,32 @@
         "postcss-loader": "^7.3.0",
         "postcss-prefix-selector": "^1.16.0",
         "prettier": "^2.8.8",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-i18next": "^12.2.2",
         "react-test-renderer": "^18.2.0",
-        "rimraf": "^5.0.0",
         "style-loader": "^3.3.1",
         "tailwindcss": "^3.3.2",
-        "terser-webpack-plugin": "^5.3.8",
+        "terser-webpack-plugin": "^5.3.9",
         "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.1",
-        "turbo": "^1.9.4",
+        "turbo": "^1.9.8",
         "typescript": "^5.0.4",
         "url-loader": "^4.1.1",
-        "wagmi": "^0.12.12",
-        "webpack": "^5.82.1",
+        "webpack": "^5.83.1",
         "webpack-dev-server": "^4.15.0"
     },
     "dependencies": {
-        "@carrot-kpi/shared-state": "^0.3.1"
+        "@carrot-kpi/react": "^0.45.1",
+        "@carrot-kpi/sdk": "^1.26.0",
+        "@carrot-kpi/shared-state": "^0.3.1",
+        "@carrot-kpi/ui": "^0.45.0",
+        "@fontsource/ibm-plex-mono": "^4.5.13",
+        "class-variance-authority": "^0.6.0",
+        "dayjs": "^1.11.7",
+        "i18next": "^22.4.15",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-i18next": "^12.2.2",
+        "rimraf": "^5.0.1",
+        "viem": "^0.3.30",
+        "wagmi": "^1.0.5"
     }
 }
