--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -12,7 +12,7 @@
         "outDir": "./dist",
         "module": "ESNext",
         "lib": ["DOM", "ESNext"],
-        "target": "ES6",
+        "target": "ESNext",
         "sourceMap": true,
         "strict": true,
         "rootDirs": ["./src"],
