--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -79,5 +79,19 @@
         "rimraf": "^5.0.1",
         "viem": "^0.3.30",
         "wagmi": "^1.0.5"
+    },
+    "browserslist": {
+        "production": [
+            "chrome >= 67",
+            "edge >= 79",
+            "firefox >= 68",
+            "opera >= 54",
+            "safari >= 14"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
