--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -3,9 +3,9 @@ remappings = [
     'carrot/=lib/carrot/contracts',
     'forge-std/=lib/forge-std/src/',
     'oz-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/',
-    'oz/=lib/openzeppelin-contracts/contracts/'
+    'oz/=lib/openzeppelin-contracts/contracts/',
 ]
-optimizer = false
+optimizer_runs = 200
 
 [profile.production]
 optimizer = true
