refactor(frontend): explicit types import

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -28,6 +28,7 @@
         "esModuleInterop": true,
         "skipLibCheck": false,
         "forceConsistentCasingInFileNames": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "verbatimModuleSyntax": true
     }
 }
