--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,7 +25,7 @@
         "test": "echo 'Fix issues with pnpm and Jest not resolving modules'"
     },
     "devDependencies": {
-        "@carrot-kpi/host-frontend": "^0.7.1",
+        "@carrot-kpi/host-frontend": "^0.7.5",
         "@carrot-kpi/switzer-font": "^0.1.0",
         "@commitlint/cli": "^17.6.5",
         "@svgr/webpack": "^8.0.1",
@@ -33,9 +33,10 @@
         "@testing-library/react": "^14.0.0",
         "@types/git-rev-sync": "^2.0.0",
         "@types/jest": "^29.5.2",
-        "@types/react": "^18.2.7",
+        "@types/react": "^18.2.9",
         "@types/react-dom": "^18.2.1",
         "autoprefixer": "^10.4.13",
+        "carrot-scripts": "0.22.2",
         "chalk": "^5.0.1",
         "css-loader": "^6.8.1",
         "cssnano": "^6.0.1",
@@ -58,27 +59,27 @@
         "terser-webpack-plugin": "^5.3.9",
         "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.3",
-        "turbo": "^1.10.1",
-        "typescript": "^5.0.4",
+        "turbo": "^1.10.2",
+        "typescript": "^5.1.3",
         "url-loader": "^4.1.1",
-        "webpack": "^5.85.0",
+        "webpack": "^5.86.0",
         "webpack-dev-server": "^4.15.0"
     },
     "dependencies": {
-        "@carrot-kpi/react": "^0.47.0",
-        "@carrot-kpi/sdk": "^1.27.3",
+        "@carrot-kpi/react": "^0.47.2",
+        "@carrot-kpi/sdk": "^1.27.5",
         "@carrot-kpi/shared-state": "^0.3.1",
-        "@carrot-kpi/ui": "^0.46.0",
+        "@carrot-kpi/ui": "^0.48.2",
         "@fontsource/ibm-plex-mono": "^5.0.2",
         "class-variance-authority": "^0.6.0",
-        "dayjs": "^1.11.7",
-        "i18next": "^22.5.0",
+        "dayjs": "^1.11.8",
+        "i18next": "^22.5.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^12.3.1",
         "rimraf": "^5.0.1",
-        "viem": "^0.3.41",
-        "wagmi": "^1.0.9"
+        "viem": "^1.0.2",
+        "wagmi": "^1.1.1"
     },
     "browserslist": {
         "production": [
