chore: upgrade dependencies

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -26,7 +26,7 @@
         "moduleResolution": "node",
         "jsx": "react-jsx",
         "esModuleInterop": true,
-        "skipLibCheck": false,
+        "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
         "verbatimModuleSyntax": true
