--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -36,6 +36,7 @@
         "@types/react": "^18.2.20",
         "@types/react-dom": "^18.2.7",
         "autoprefixer": "^10.4.15",
+        "buffer": "^6.0.3",
         "carrot-scripts": "0.22.6",
         "chalk": "^5.3.0",
         "css-loader": "^6.8.1",
