--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,18 +25,19 @@
         "test": "echo 'Fix issues with pnpm and Jest not resolving modules'"
     },
     "devDependencies": {
-        "@carrot-kpi/host-frontend": "^0.16.0",
+        "@carrot-kpi/host-frontend": "^0.17.0",
         "@carrot-kpi/switzer-font": "^0.1.0",
         "@commitlint/cli": "^17.7.1",
         "@svgr/webpack": "^8.0.1",
-        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/jest-dom": "^6.1.3",
         "@testing-library/react": "^14.0.0",
         "@types/git-rev-sync": "^2.0.0",
         "@types/jest": "^29.5.3",
         "@types/react": "^18.2.20",
         "@types/react-dom": "^18.2.7",
         "autoprefixer": "^10.4.15",
-        "carrot-scripts": "0.22.6",
+        "buffer": "^6.0.3",
+        "carrot-scripts": "0.22.11",
         "chalk": "^5.3.0",
         "css-loader": "^6.8.1",
         "cssnano": "^6.0.1",
@@ -66,10 +67,10 @@
         "webpack-dev-server": "^4.15.0"
     },
     "dependencies": {
-        "@carrot-kpi/react": "^0.55.0",
+        "@carrot-kpi/react": "^0.56.0",
         "@carrot-kpi/sdk": "^1.33.2",
-        "@carrot-kpi/shared-state": "^0.5.0",
-        "@carrot-kpi/ui": "^0.53.0",
+        "@carrot-kpi/shared-state": "^0.6.0",
+        "@carrot-kpi/ui": "^0.56.0",
         "@fontsource/ibm-plex-mono": "^5.0.8",
         "class-variance-authority": "^0.7.0",
         "dayjs": "^1.11.9",
